force-app/main/default/objects/Lead_Score_Rule__c/Lead_Score_Rule__c.object-meta.xml
<CustomObject>
    <description>Stores dynamic lead scoring rules. Each record defines one scoring criterion — field, operator, value, and points. Fully metadata-driven with zero hardcoded values.</description>
    <label>Lead Score Rule</label>
    <nameField>
        <displayFormat>LSR-{0000}</displayFormat>
        <label>Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Score Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>