force-app/main/default/objects/Lead_Score_Rule__c/fields/Count_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Count_Threshold__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Minimum count of related records required for this rule to match (used with Operator to compare). Default is 1.</description>
    <label>Count Threshold</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>