force-app/main/default/objects/Lead_Score_Rule__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the Lead__c field to evaluate (e.g. Budget_Range__c, Lead_Source__c). Used for Field-type rules.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>