force-app/main/default/objects/Lead_Score_Rule__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Display label of the field (stored for UI readability).</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>