force-app/main/default/objects/Lead_Score_Rule__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>The value to compare against (e.g. &quot;Above 2 Cr&quot;, &quot;Immediate&quot;, &quot;NRI&quot;). Stored as text; type coercion happens at runtime.</description>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>