force-app/main/default/objects/Lead_Score_Rule__c/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <description>API name of the field on the related object to filter by when counting records (optional, for Count rules).</description>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>