force-app/main/default/objects/Lead_Score_Rule__c/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <description>The value to filter by on the related object field when counting records (optional, for Count rules).</description>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>