force-app/main/default/objects/Lead_Score_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this scoring rule is currently active and should be evaluated.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>