force-app/main/default/objects/Lead_Score_Rule__c/fields/Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field__c</fullName>
    <description>API name of the lookup field on the related object that points to Lead__c (e.g. Lead__c). Used for Count-type rules.</description>
    <label>Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>