force-app/main/default/objects/Lead_Score_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Comparison operator: equals, not_equals, contains, greater_than, less_than, greater_or_equal, less_or_equal.</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>not_equals</fullName>
                <label>Not Equals</label>
            </value>
            <value>
                <fullName>contains</fullName>
                <label>Contains</label>
            </value>
            <value>
                <fullName>greater_than</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>less_than</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>greater_or_equal</fullName>
                <label>Greater or Equal</label>
            </value>
            <value>
                <fullName>less_or_equal</fullName>
                <label>Less or Equal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>