force-app/main/default/objects/Lead_Score_Rule__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of points to add (or subtract if negative) when this rule matches.</description>
    <label>Points</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>