force-app/main/default/objects/Lead_Score_Rule__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>API name of the child object to count (e.g. Site_Visit__c, Enquiry_Source__c). Used for Count-type rules only.</description>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>