force-app/main/default/objects/Lead_Score_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>Whether this rule evaluates a field value on Lead__c or counts related child records.</description>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>