force-app/main/default/objects/Lead_Score_Rule__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Display order in the designer UI. Lower numbers appear first.</description>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>